# maindata-id

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  fly.toml  main.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: initial_migration.py  update_dataset_catalog.py  update_dataset_schema_v2.py
backend/app/models/: db.py  schema.py
backend/app/routes/: dataset.py  generate_sql.py  session.py
backend/app/services/: llm.py  memory.py  rag_dataset.py  rag_sql.py
backend/app/utils/: embedding.py  uuid_helper.py
backend/scripts/: fetch_datasets.py  fetch_opendata_jabar.py  seed_example_data.py
backend/tests/: conftest.py  example_test.txt  test_main.py  test_session.py
docs/: architecture.md  backend-specification.md  product-requirements.md
frontend/: Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/create-session/: route.ts
frontend/app/datasets/: page.tsx
frontend/app/query/: page.tsx
frontend/app/query/[sessionId]/: page.tsx
frontend/components/: duckdb-provider.tsx  footer.tsx  natural-language-input.tsx  results-chart.tsx  results-table.tsx  sql-editor.tsx
frontend/components/chat/: api-settings-dialog.tsx  api-status.tsx  chat-container.tsx  chat-input.tsx  chat-message.tsx  duckdb-status.tsx  streaming-sql-generation.tsx
frontend/components/ui/: chart-context.tsx  chart.tsx
frontend/lib/: api-client.ts  debug-utils.ts  duckdb.ts  llm.ts  mock-data.ts  sql-parser.ts
