[project]
name = "backend"
version = "0.1.0"
description = "Backend for MainData.id"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "fastapi[standard]>=0.115.6",
    "google-generativeai==0.3.2", # Keep for now, might be removed later if not needed
    "httpx==0.27.0",
    "numpy==1.26.4",
    "pgvector==0.2.5",
    "pydantic==2.6.3",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.28",
    "uvicorn==0.29.0",
    "litellm==1.37.1", # Added litellm
    "langchain-community==0.2.10", # Added langchain-community
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-watcher>=0.4.3",
]

# more info see https://pypi.org/project/pytest-watcher/
[tool.pytest-watcher]
now = true
clear = true
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []
